--- a/node-server/package.json
+++ b/node-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "discovery": "cross-env NODE_ENV=development nodemon node-discovery.js",
-    //"client": "node client.js",
+    "client": "node client.js",
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,7 @@
   "author": "dsatter group",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "express": "^4.18.2",
     "ws": "^8.10.0"
   },
