--- a/node-server/package.json
+++ b/node-server/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "discovery": "cross-env NODE_ENV=development nodemon node-discovery.js",
-    "client": "node client.js",
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "cs": "cross-env NODE_ENV=development nodemon node-server.js",
+    "chatserver": "cross-env NODE_ENV=development node node-server.js",
     "test": "cross-env NODE_ENV=test echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
