--- a/node-server/package.json
+++ b/node-server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "jest": "^29.3.1",
     "sqlite3": "^5.1.2",
     "ws": "^8.10.0"
   },
