--- a/node-server/package.json
+++ b/node-server/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint ."
   },
   "author": "dsatter group",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "sqlite3": "^5.1.2",
     "ws": "^8.10.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^8.26.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20"
   }
 }
