--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,16 +21,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - run: cd node-server
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd node-server
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
     - run: cd ../node-discovery
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
