--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,26 +16,19 @@ jobs:
 
     strategy:
       matrix:
+        {dir: ['node-discovery', 'node-server']}
         node-version: [16.18]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
-    - run: cd node-server
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-    - run: cd ../node-discovery
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+    - name: Select node
+      working-directory: ${{ matrix.dir }}
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
