nodeyml only for node-server

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,13 +17,11 @@ jobs:
     strategy:
       matrix:
         node-version: [16.18]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v3
-      working-directory: ${{ matrix.dir }}
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
+      working-directory: ./node-server
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
