--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,13 +15,13 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      matrix:
+      matrix {dir: './node-server'}:
         node-version: [16.18]
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
-      working-directory: ./node-server
+      working-directory: ${{ matrix.dir }}
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
