--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,17 +11,17 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [16.18]
+    defaults:
+      run:
+        working-directory: './node-server'
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
-      working-directory: './node-server'
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
