--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
         node-version: [16.18]
     steps:
     - run: pwd
-    - run: ls
+    - run: ls -la
     - run: cd ./node-server/
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
