--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,14 +16,10 @@ jobs:
       matrix:
         node-version: [16.18]
     steps:
-    - run: pwd
-    - run: ls -la
-    - run: cd ..
-    - run: ls -la
-    - run: cd node-server/
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
+      working-directory: 'node-server/'
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
