--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,6 +8,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    
+defaults:
+  run:
+    shell: bash
+    working-directory: node-server/
 
 jobs:
   build:
@@ -19,7 +24,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
-      working-directory: 'node-server/'
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
