--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,11 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash
         working-directory: node-server/
     strategy:
       matrix:
-        node-version: [16.18]
+        node-version: 16.18
     steps:
     - run: ls -la
     - uses: actions/checkout@v3
