--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,11 +12,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: node-server/
     strategy:
-      matrix:
+      matrix { dir: ['node-discovery', 'node-server']}:
         node-version: [16.18]
     steps:
     - uses: actions/checkout@v3
@@ -25,7 +22,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: node-server/package-lock.json
+        cache-dependency-path: ${{ matrix.dir }}/package-lock.json
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
