--- a/node-discovery/package.json
+++ b/node-discovery/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
   "author": "dsatter group",
@@ -14,11 +14,9 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^8.27.0",
-    "jest": "^29.3.1",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.2"
+    "express": "^4.18.2"
   }
 }
