--- a/node-server/package.json
+++ b/node-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "jest",
     "lint": "eslint ."
   },
   "author": "dsatter group",
